# Grape

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  debug-build.sh  debug-with-plugin-host.sh  grape.code-workspace  hello.cpp  juce.patch  release-build.sh
.github/workflows/: build.yml
Source/: Components.cpp  Components.h  DSP.h  LookAndFeel.cpp  LookAndFeel.h  Params.cpp  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Voice.cpp  Voice.h  WavetableGen.cpp
benchmark/: Benchmark.cpp  CMakeLists.txt
data/: CMakeLists.txt  WavetableGen.cpp
dev/bench/: data.js
src/: CMakeLists.txt  Components.cpp  Components.h  Constants.h  DSP.h  LookAndFeel.cpp  LookAndFeel.h  MathConstants.h  Params.cpp  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StyleConstants.h  Voice.cpp  Voice.h  WavetableGen.cpp
